--- a/day1/黑马的代码案例-小黑记事本.html
+++ b/day1/黑马的代码案例-小黑记事本.html
@@ -1,10 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+
+<div id = "app">
+    <header class="header">
+        <h1>小黑记事本</h1>
+        <input placeholder="请输入任务" class="new-todo">
+        <button class="add">添加任务</button>
+
+    </header>
+
+    //列表区域
+    <section class="main">
+        <ul class="todo-list">
+            <li class="todo">
+                <div>
+
+                </div>
+
+            </li>
+        </ul>
+    </section>
+
+    //统计和清空
+    <footer>
+
+    </footer>
+
+
+
+
+</div>
+<!--引入vue.js-->
+<script src="../script/vue.js"></script>
+
+<script>
+    //创建一个vue实例
+    const app = new Vue({
+        el: '#app',
+        data: {
+            list: [
+                {id: 1,name:'跑步二十分钟'},
+                {id: 2,name:'复习数组语法'},
+                {id: 3,name:'玩游戏一小时'},
+            ],
+            task: ''
+        },
+        methods: {
+            //添加任务
+            add(){
+                if(this.task.trim() !== ""){
+                    const newItem = {
+                        id: new Date() + 1,
+                        name: this.task
+                    }
+                    this.list.push(newItem);
+                    this.task = ''
+                }else{
+                    alert('任务名称不能为空')
+                }
+
+
+            },
+
+            //清空任务
+            clear(){
+                this.list = []
+
+            },
+
+            //删除任务项
+            del(id){
+                this.list = this.list.filter(item => item.id !== id)
+
+            }
+
+
+
+
+        }
+    })
+</script>
+
 </body>
 </html>
