--- a/day2/v-model应用其他表单元素.html
+++ b/day2/v-model应用其他表单元素.html
@@ -3,8 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+        .active{
+            color: red;
+        }
+    </style>
 </head>
 <body>
+
+<div id = "app">
+  <h1>小黑学习网</h1>
+    <input type="text" v-model="username">姓名<br><br>
+
+    是否单身：
+    <input type="checkbox" v-model="isSingle"><br><br>
+
+<!--    这里v-model和value的值是绑定在一起的-->
+    性别：
+    <input type="radio" v-model="gender" name="gender" value="1">男
+    <input type="radio" v-model="gender" name="gender" value="2">女<br><br>
+
+    所在城市
+    <select v-model="city">
+        <option value="1">上海</option>
+        <option value="2">厦门</option>
+        <option value="3">福州</option>
+
+    </select><br><br>
+
+
+</div>
+<!--引入vue.js-->
+<script src="../script/vue.js"></script>
+
+<script>
+    //创建一个vue实例
+    const app = new Vue({
+        el: '#app',
+        data: {
+
+            username: '文千喜',
+            gender: 2,
+            isSingle: true,
+            city: 3
+
+        },
+        methods: {
+
+
+
+
+
+
+
+        }
+    })
+</script>
 
 </body>
 </html>
