--- a/day2/watch.html
+++ b/day2/watch.html
@@ -6,5 +6,74 @@
 </head>
 <body>
 
+<div id = "app">
+
+
+    <select v-model="obj.lang">
+        <option value="italy">意大利</option>
+        <option value="english">英语</option>
+        <option value="german">德语</option>
+
+    </select>
+
+
+    <!-- 翻译框 -->
+    <div class="box">
+        <div class="input-wrap">
+            <textarea v-model="obj.words"></textarea>
+            <span><i>⌨️</i>文档翻译</span>
+        </div>
+        <div class="output-wrap">
+            <input type="text" class="transbox" v-model="result"></input>
+        </div>
+    </div>
+
+
+</div>
+<!--引入vue.js-->
+<script src="../script/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+
+
+<script>
+    //创建一个vue实例
+    const app = new Vue({
+        el: '#app',
+        data: {
+            obj: {
+                lang: '',
+                words: ''
+
+            },
+            result: ''
+
+
+        },
+        watch: {
+
+            'obj.words'(newValue) {
+                // console.log('变化了', newValue)
+                // 防抖: 延迟执行 → 干啥事先等一等，延迟一会，一段时间内没有再次触发，才执行
+                clearTimeout(this.timer)
+                this.timer = setTimeout(async () => {
+                    const res = await axios({
+                        url: 'https://applet-base-api-t.itheima.net/api/translate',
+                        params: {
+                            words: newValue
+                        }
+                    })
+                    this.result = res.data.data
+                    console.log(res.data.data)
+                }, 300)
+            }
+        }
+
+
+
+
+    })
+</script>
+
 </body>
 </html>
